--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: monospace;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3685b5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  width: 380px;
+  padding: 20px 10px;
+  border-radius: 4px;
+  box-shadow: 4px 8px 6px 0 #555;
+  background: white;
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.app-label {
+  margin: 20px auto;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.city-image {
+  width: 140px;
+  height: 140px;
+  margin: 40px auto;
+}
+
+.city-container {
+  text-align: center;
+}
+
+.city-container form {
+  display: flex;
+  border: 2px solid black;
+  justify-content: space-evenly;
+}
+
+.city-container form input {
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  outline: none;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+.city-container form button {
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 14px;
+  padding: 0 10px;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: black;
 }
