--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 body {
     font-family: 'Courier New', Courier, monospace;
+    font-size: larger;
+    background-color: black;
+    color: white;
 }
-.searchCity{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+input{
+    color: black;
 }
